<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="welkom">Goedendag Naam Gebruiker,</string>
    <string name="qoute">Alle paddestoelen zijn eetbaar. Weliswaar zijn er paddestoelen die je maar één keer kunt eten.</string>
    <string name="gerechtTitle">Chicken Kebab</string>
    <string name="Ontdek_nieuwe_gerechten">Ontdek nieuwe gerechten</string>
    <string name="ingredienten">ingredienten</string>
    <string name="instructies">instructies</string>
    <string name="eigengerechten">Eigen gerechten</string>
    <string name="gaTerug">&lt;</string>
    <string name="filterKnop">filter</string>
    <string name="filterTitel">Filter op een van de volgende categorieën!</string>
    <string name="vis">vis</string>
    <string name="kip">kip</string>
    <string name="oven">oven</string>
    <string name="rund">rund</string>
    <string name="varken">varken</string>
    <string name="vega">vega</string>
    <string name="geen_filter">geen filter</string>
    <string name="maakGerecht">Maak nieuw gerecht aan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>